feat: list tenants
