# auth/apis.go
@@ -10,14 +10,6 @@ import (
 	"strings"
 )
 
-func RegisterRoutes(app fiber.Router) {
-	app.Post("/login", Login)
-	app.Post("/refresh", Refresh)
-	app.Post("/register", Register)
-	app.Post("/validate", Validate)
-	app.Get("/users/:id/activate", Activate)
-}
-
 // Login
 // @Summary Login
 // @Description use email and password to get jwt tokens, valid user only
@@ -270,4 +262,40 @@ func Activate(c *fiber.Ctx) error {
 		AccessToken:  access,
 		RefreshToken: refresh,
 	})
+}
+
+type RegisterBody struct {
+	Username     string `json:"username" validate:"max=32"`
+	Email        string `json:"email" validate:"required,email"`
+	Password     string `json:"password" validate:"required,min=8"`
+	TEL          string `json:"tel"`
+	TenantID     int    `json:"tenant_id" validate:"required"`
+	TenantAreaID int    `json:"tenant_area_id"`
+}
+
+type LoginBody struct {
+	Username string `json:"username" validate:"max=32"`
+	Email    string `json:"email" validate:"email"`
+	Password string `json:"password" validate:"required,min=8"`
+}
+
+type RefreshBody struct {
+	RefreshToken string `json:"refresh_token" validate:"required"`
+}
+
+type ActivateQuery struct {
+	Code string `query:"code" validate:"required"`
+}
+
+type ValidateModel struct {
+	Email string `query:"email" validate:"email"`
+}
+
+type TokenResponse struct {
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"`
+}
+
+type MessageResponse struct {
+	Message string `json:"message"`
 }
