# docs/swagger.json
@@ -474,6 +474,29 @@
                 }
             }
         },
+        "/tenants": {
+            "get": {
+                "description": "List all tenants with areas each",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Tenant"
+                ],
+                "summary": "List Tenants",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/auth.Tenant"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/users/{id}/activate": {
             "get": {
                 "description": "clicks the link in the email to activate the user",
@@ -603,6 +626,41 @@
                 "username": {
                     "type": "string",
                     "maxLength": 32
+                }
+            }
+        },
+        "auth.Tenant": {
+            "type": "object",
+            "properties": {
+                "domains": {
+                    "description": "separate by comma",
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "tenantAreas": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/auth.TenantArea"
+                    }
+                }
+            }
+        },
+        "auth.TenantArea": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "tenant_id": {
+                    "type": "integer"
                 }
             }
         },
